--- a/editor/CMakeLists.txt
+++ b/editor/CMakeLists.txt
@@ -14,7 +14,7 @@ set(EDITOR_FILES ${EDITOR_HEADERS} ${EDITOR_SOURCES})
 
 # Source group mapping (IDE folder view)
 foreach(file ${EDITOR_FILES})
-    file(RELATIVE_PATH rel_path "${CMAKE_CURRENT_LIST_DIR}" "${file}")
+    file(RELATIVE_PATH rel_path "${CMAKE_CURRENT_LIST_DIR}/Editor" "${file}")
     get_filename_component(dir "${rel_path}" DIRECTORY)
     string(REPLACE "/" "\\" group "${dir}")
     source_group("${group}" FILES "${file}")
@@ -25,5 +25,5 @@ target_include_directories(Editor PUBLIC ${CMAKE_CURRENT_LIST_DIR}/Editor)
 target_link_libraries(Editor PUBLIC ${libraries})
 
 target_link_libraries(Editor PRIVATE ${libraries})
-set_target_properties(Editor PROPERTIES FOLDER "Applications")
+# set_target_properties(Editor PROPERTIES FOLDER "Applications")
 set_app_output_dirs(Editor)
