--- a/libraries/Engine/CMakeLists.txt
+++ b/libraries/Engine/CMakeLists.txt
@@ -12,7 +12,7 @@ set(ENGINE_FILES ${ENGINE_SOURCES} ${ENGINE_HEADERS})
 
 # Group files in IDE by folder structure
 foreach(file ${ENGINE_FILES})
-    file(RELATIVE_PATH rel_path "${CMAKE_CURRENT_LIST_DIR}" "${file}")
+    file(RELATIVE_PATH rel_path "${CMAKE_CURRENT_LIST_DIR}/Engine" "${file}")
     get_filename_component(dir "${rel_path}" DIRECTORY)
     string(REPLACE "/" "\\" group "${dir}")  # For Visual Studio
     source_group("${group}" FILES "${file}")
