--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@
 # Projects Settings
 # ---------------------------------------------------------------------------------
 cmake_minimum_required(VERSION 4.0)
-project(Vulkan-Rendering-Engine)
+project(Rendering-Engine)
 set(CMAKE_CXX_STANDARD 23)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
