--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,8 @@
 # ---------------------------------------------------------------------------------
 # Projects Settings
 # ---------------------------------------------------------------------------------
-cmake_minimum_required(VERSION 3.3)
-project(Vulkan-Rendering-Engine)
+cmake_minimum_required(VERSION 4.0)
+project(Rendering-Engine)
 set(CMAKE_CXX_STANDARD 23)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
