--- a/libraries/Engine/Engine/Graphics/CMakeLists.txt
+++ b/libraries/Engine/Engine/Graphics/CMakeLists.txt
@@ -14,6 +14,8 @@ add_subdirectory(Interfaces)
 add_subdirectory(Windows)
 add_subdirectory(Renderer)
 add_subdirectory(Textures)
+add_subdirectory(Utility)
+add_subdirectory(Base)
 
 set(ENGINE_FILES ${ENGINE_FILES} ${GRAPHICS_FILES} PARENT_SCOPE)
 
