--- a/libraries/Engine/Engine/Graphics/Base/CmakeLists.txt
+++ b/libraries/Engine/Engine/Graphics/Base/CmakeLists.txt
@@ -1,6 +1,8 @@
 set(BASE_FILES
     ImGuiBase.cpp
     ImGuiBase.h
+    TextureBase.cpp
+    TextureBase.h
 )
 
 list(TRANSFORM BASE_FILES PREPEND "${CMAKE_CURRENT_SOURCE_DIR}/")
