Made the window resizeable, and to handle that recreate the swapchain (minus the swapchain renderpass, for now)
Added a WindowBase to contain some common window impl logic

Renamed GLFWWindow (Engine version) to GLFWWindowImpl to avoid confusion with GLFWWindow (GLFW version)

--- a/libraries/Engine/Engine/Graphics/Windows/CMakeLists.txt
+++ b/libraries/Engine/Engine/Graphics/Windows/CMakeLists.txt
@@ -1,6 +1,6 @@
 set(WINDOW_FILES
-    GLFWWindow.cpp
-    GLFWWindow.h
+    GLFWWindowImpl.cpp
+    GLFWWindowImpl.h
 )
 
 list(TRANSFORM WINDOW_FILES PREPEND "${CMAKE_CURRENT_SOURCE_DIR}/")
