--- a/libraries/Engine/Engine/Graphics/Base/CmakeLists.txt
+++ b/libraries/Engine/Engine/Graphics/Base/CmakeLists.txt
@@ -3,6 +3,8 @@ set(BASE_FILES
     ImGuiBase.h
     TextureBase.cpp
     TextureBase.h
+    WindowBase.cpp
+    WindowBase.h
 )
 
 list(TRANSFORM BASE_FILES PREPEND "${CMAKE_CURRENT_SOURCE_DIR}/")
