Added resources/shaders shader files to the ide view for easier changes

--- a/libraries/Engine/Engine/CMakeLists.txt
+++ b/libraries/Engine/Engine/CMakeLists.txt
@@ -22,4 +22,5 @@ target_include_directories(Engine PUBLIC
 
 target_link_libraries(Engine PUBLIC Vulkan::Vulkan glm stb glfw imgui tinyobjloader spdlog nlohmann_json)
 set_target_properties(Engine PROPERTIES FOLDER "Libraries")
+add_resources_to_target(Engine)
 set_lib_output_dirs(Engine)
