Work in progress, but slowly migrating to dynamic rendering

--- a/libraries/Engine/Engine/Graphics/Renderer/CMakeLists.txt
+++ b/libraries/Engine/Engine/Graphics/Renderer/CMakeLists.txt
@@ -3,6 +3,8 @@ set(RENDERER_FILES
 	Renderer.h
 	RenderPass.cpp
 	RenderPass.h
+	Framebuffer.cpp
+	Framebuffer.h
 )
 
 list(TRANSFORM RENDERER_FILES PREPEND "${CMAKE_CURRENT_SOURCE_DIR}/")
